--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         ]
     },
     "devDependencies": {
-        "prettier": "^2.1.2"
+        "prettier": "^2.1.2",
+        "uuid": "^8.3.1"
     }
 }
