--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
         ]
     },
     "devDependencies": {
-        "prettier": "^2.1.2",
-        "uuid": "^8.3.1"
+        "prettier": "^2.1.2"
     }
 }
