--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_API_BASE_URL="https://srodrig-merntasks-backend.herokuapp.com:4000/"
+REACT_APP_API_BASE_URL="https://srodrig-merntasks-backend.herokuapp.com/"
